[tool.poetry]
name = "zabbixbot"
version = "0.1.0"
description = ""
authors = ["maximt <vbmaxim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyzabbix = "^1.3.0"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.6"
icmplib = "^3.0.4"
fqdn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
